--- a/crates/apheleia_prism/Cargo.toml
+++ b/crates/apheleia_prism/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+apheleia_macro = { version = "0.1.0", path = "../apheleia_macro" }
 bevy_ecs = { version = "0.11.2", default-features = false, features = ["multi-threaded"] }
