--- a/crates/apheleia_bookwyrm/Cargo.toml
+++ b/crates/apheleia_bookwyrm/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+apheleia_prism = { version = "0.1.0", path = "../apheleia_prism" }
 logos = "0.13.0"
