--- a/crates/apheleia_prism/Cargo.toml
+++ b/crates/apheleia_prism/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 apheleia_macro = { version = "0.1.0", path = "../apheleia_macro" }
+bevy_app = { version = "0.11.2", default-features = false }
 bevy_ecs = { version = "0.11.2", default-features = false, features = ["multi-threaded"] }
+bevy_tasks = "0.11.2"
