--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ apheleia_hydra = { version = "0.1.0", path = "crates/apheleia_hydra" }
 apheleia_narcissus = { version = "0.1.0", path = "crates/apheleia_narcissus" }
 apheleia_prism = { version = "0.1.0", path = "crates/apheleia_prism" }
 apheleia_macro = { version = "0.1.0", path = "crates/apheleia_macro" }
+apheleia_bestiary = { version = "0.1.0", path = "crates/apheleia_bestiary" }
 
 [workspace]
