--- a/crates/apheleia_bestiary/Cargo.toml
+++ b/crates/apheleia_bestiary/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "apheleia_macro"
+name = "apheleia_bestiary"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-proc-macro2 = "1.0.66"
-quote = "1.0.33"
-syn = { version = "2.0.37", features = ["full"] }
-
-[lib]
-proc-macro = true
+apheleia_prism = { version = "0.1.0", path = "../apheleia_prism" }
